Advanced_Feature/3.14_GRPCRoute_Weight/gw-grpc-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class

  addresses:
    - type: IPAddress
      value: 40.30.20.20

  listeners:
    - name: bnk-listener
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All

        kinds:
          - kind: GRPCRoute

---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-weight-route
  namespace: web
spec:
  parentRefs:
    - name: http-gw
      sectionName: bnk-listener

  hostnames:
    - grpc.f5bnk.com

  rules:
    - backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com
          weight: 70
        - name: tea-pool
          kind: Pool
          group: k8s.f5net.com
          weight: 30
